--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
         "@solana/spl-token": "^0.4.14",
         "@solana/web3.js": "^1.98.4",
         "@supabase/supabase-js": "^2.39.0",
+        "bs58": "^6.0.0",
         "clsx": "^2.1.1",
         "framer-motion": "^12.23.24",
+        "langchain": "^1.1.1",
         "lucide-react": "^0.554.0",
         "next": "^16.0.3",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "solana-agent-kit": "^1.1.0",
         "tailwind-merge": "^3.4.0",
         "zod": "^4.1.13"
     },
