--- a/package.json
+++ b/package.json
@@ -75,13 +75,8 @@
         "@types/jest": "^29.5.0",
         "ts-jest": "^29.1.0",
         "jest-environment-node": "^29.7.0",
-        "k6": "^0.45.0",
         "artillery": "^2.0.0",
-        "@types/artillery": "^2.0.0",
-        "semgrep": "^1.45.0",
-        "snyk": "^1.1200.0",
-        "npm-audit-ci": "^1.0.0",
-        "gitleaks": "^8.18.0",
+        "@types/artillery": "^1.7.5",
         "eslint": "^8.55.0",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
@@ -102,9 +97,6 @@
         "supertest": "^6.3.0",
         "sqlite3": "^5.1.0",
         "@types/sqlite3": "^3.1.0",
-        "miniflare": "^3.0.0",
-        "@miniflare/storage-memory": "^3.0.0",
-        "@miniflare/d1": "^3.0.0",
-        "@miniflare/kv": "^3.0.0"
+        "miniflare": "^3.0.0"
     }
 }
