--- a/quantum_command_center/config/llm_config.yaml
+++ b/quantum_command_center/config/llm_config.yaml
@@ -1,17 +1,17 @@
 # /config/llm_config.yaml
 
-# Configuration for the Zero-Cost LLM Inference
-# We will use the local GGUF model via Ollama/llama.cpp in later phases.
-# For Phase 1, we use a mock/placeholder to test logic.
+# Configuration for Gemini (Paid/Free Tier) and Grok
+# Zero-Cost Philosophy: Use Free Tier where possible.
 
 default_config:
-  # The actual model to be used in production (e.g., Llama 3 8B GGUF)
-  # For AutoGen, we set a default to pass configuration checks.
-  model: "mock-llm-model"
-  api_key: "MOCK_KEY"
-  base_url: "http://localhost:11434/v1" # Example Ollama endpoint
+  model: "gemini-flash-latest" # Cost-effective, high performance
+  api_key: "ENV_VAR_GEMINI_API_KEY" # Will be loaded from env
+  base_url: "https://generativelanguage.googleapis.com/v1beta/openai/" # OpenAI-compatible endpoint for Gemini
 
 config_list:
-  - model: "mock-llm-model"
-    api_key: "MOCK_KEY"
-    base_url: "MOCK_BASE_URL" # Placeholder
+  - model: "gemini-flash-latest"
+    api_key: "ENV_VAR_GEMINI_API_KEY"
+    base_url: "https://generativelanguage.googleapis.com/v1beta/openai/"
+  - model: "grok-beta"
+    api_key: "ENV_VAR_GROK_API_KEY"
+    base_url: "https://api.x.ai/v1" # Grok API endpoint
