--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "axiom-core-deployment",
     "version": "1.0.0",
+    "packageManager": "npm@10.8.2",
     "private": true,
     "scripts": {
         "dev": "next dev",
