fix: update build commands to run from web-ui directory

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "packageManager": "npm@10.8.2",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
+        "dev": "cd packages/web-ui && next dev",
+        "build": "cd packages/web-ui && next build",
+        "start": "cd packages/web-ui && next start",
+        "lint": "cd packages/web-ui && next lint",
         "deploy:prod": "chmod +x scripts/deploy-production.sh && ./scripts/deploy-production.sh",
         "deploy:staking": "cd src/infra/solana/programs/axiom-staking && anchor build && npx ts-node scripts/deploy-staking-mainnet.ts",
         "test:staking": "cd src/infra/solana/programs/axiom-staking && anchor test",
