--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "packageManager": "npm@10.8.2",
     "private": true,
+    "workspaces": [
+        "packages/*"
+    ],
     "scripts": {
         "dev": "cd packages/web-ui && next dev",
         "build": "cd packages/web-ui && next build",
