--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -12,6 +12,8 @@
     "@ai-sdk/openai": "^2.0.74",
     "@arcjet/next": "^1.0.0-beta.15",
     "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^1.1.0",
+    "@langchain/langgraph": "^1.0.2",
     "@libsql/client": "^0.15.15",
     "@pinecone-database/pinecone": "^6.1.3",
     "@react-three/drei": "^10.7.7",
@@ -24,16 +26,19 @@
     "@types/three": "^0.181.0",
     "@upstash/redis": "^1.35.7",
     "@vercel/speed-insights": "^1.2.0",
+    "ai": "^5.0.104",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
     "groq-sdk": "^0.37.0",
     "nanoid": "^5.1.6",
     "next": "16.0.5",
+    "next-axiom": "^1.9.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-force-graph-3d": "^1.29.0",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
