--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -6,9 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "tsx src/scripts/seed-db.ts",
+    "db:studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.44",
     "@ai-sdk/openai": "^2.0.74",
     "@arcjet/next": "^1.0.0-beta.15",
     "@google/generative-ai": "^0.24.1",
@@ -30,7 +36,9 @@
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
+    "framer-motion": "^12.23.24",
     "groq-sdk": "^0.37.0",
+    "lucide-react": "^0.555.0",
     "nanoid": "^5.1.6",
     "next": "16.0.5",
     "next-axiom": "^1.9.3",
@@ -48,6 +56,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
