CHORE: Update Vercel config & ignore files for production

--- a/vercel.json
+++ b/vercel.json
@@ -121,15 +121,6 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
-    },
-    {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
     }
   ],
   "functions": {
@@ -137,7 +128,9 @@
       "maxDuration": 30
     }
   },
-  "regions": ["iad1"],
+  "regions": [
+    "iad1"
+  ],
   "env": {
     "NEXT_PUBLIC_APP_URL": "https://axiomid.app",
     "NODE_ENV": "production"
