--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -24,6 +24,7 @@
     "@langchain/langgraph": "^1.0.2",
     "@libsql/client": "^0.15.15",
     "@pinecone-database/pinecone": "^6.1.3",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
@@ -41,7 +42,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^17.2.3",
-    "tailwind-merge": "^2.0.0",
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.24",
@@ -53,6 +53,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-force-graph-3d": "^1.29.0",
+    "tailwind-merge": "^2.0.0",
     "three": "^0.181.2",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
