--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
         "packages/*"
     ],
     "scripts": {
-        "dev": "cd packages/web-ui && next dev",
-        "build": "cd packages/web-ui && next build",
-        "start": "cd packages/web-ui && next start",
-        "lint": "cd packages/web-ui && next lint",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
         "migrate": "npx ts-node scripts/migrate.ts",
         "test:db": "npx ts-node scripts/test-foundation.ts",
         "test:api": "npx ts-node scripts/test-api.ts",
@@ -85,7 +85,7 @@
         "clsx": "^2.1.1",
         "d3": "^7.9.0",
         "dotenv": "^17.2.3",
-        "framer-motion": "^12.23.24",
+        "framer-motion": "^12.23.25",
         "helius-sdk": "^2.0.3",
         "langchain": "^1.1.1",
         "lucide-react": "^0.554.0",
