--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "name": "axiom-id",
-  "buildCommand": "cd packages/web-ui && npm run build",
-  "outputDirectory": "packages/web-ui/.next",
-  "installCommand": "cd packages/web-ui && npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install",
   "framework": "nextjs",
   "build": {
     "env": {
