--- a/package.json
+++ b/package.json
@@ -80,11 +80,13 @@
         "@upstash/ratelimit": "^2.0.7",
         "@upstash/redis": "^1.35.7",
         "ai": "^5.0.104",
+        "bip39": "^3.1.0",
         "bs58": "^6.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "d3": "^7.9.0",
         "dotenv": "^17.2.3",
+        "ed25519-hd-key": "^1.3.0",
         "framer-motion": "^12.23.25",
         "helius-sdk": "^2.0.3",
         "langchain": "^1.1.1",
