feat: Add /reset rewrite to axiom-reset-three.vercel.app

--- a/vercel.json
+++ b/vercel.json
@@ -1,141 +1,12 @@
 {
-  "version": 2,
-  "name": "axiom-id",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_APP_URL": "https://axiomid.app"
-    }
-  },
-  "redirects": [
-    {
-      "source": "/www/:path*",
-      "destination": "https://axiomid.app/:path*",
-      "permanent": true
-    },
-    {
-      "source": "/www",
-      "destination": "https://axiomid.app",
-      "permanent": true
-    },
-    {
-      "source": "/:path(www.*)",
-      "destination": "https://axiomid.app/:path*",
-      "permanent": true
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/reset/:path*",
-      "destination": "https://tiny-strudel-e4db38.netlify.app/:path*"
-    },
-    {
-      "source": "/reset",
-      "destination": "https://tiny-strudel-e4db38.netlify.app/"
-    },
-    {
-      "source": "/api/ai/:path*",
-      "destination": "/api/ai/:path*"
-    },
-    {
-      "source": "/api/agent/:path*",
-      "destination": "/api/agent/:path*"
-    },
-    {
-      "source": "/api/webhooks/:path*",
-      "destination": "/api/webhooks/:path*"
-    },
-    {
-      "source": "/api/monitoring/:path*",
-      "destination": "/api/monitoring/:path*"
-    },
-    {
-      "source": "/api/pay/:path*",
-      "destination": "/api/pay/:path*"
-    },
-    {
-      "source": "/api/performance/:path*",
-      "destination": "/api/performance/:path*"
-    },
-    {
-      "source": "/api/staking/:path*",
-      "destination": "/api/staking/:path*"
-    },
-    {
-      "source": "/api/tts/:path*",
-      "destination": "/api/tts/:path*"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
+    "rewrites": [
         {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
+            "source": "/reset",
+            "destination": "https://axiom-reset-three.vercel.app/"
         },
         {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
+            "source": "/reset/:path*",
+            "destination": "https://axiom-reset-three.vercel.app/:path*"
         }
-      ]
-    },
-    {
-      "source": "/api/webhooks/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-store, no-cache, must-revalidate"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-DNS-Prefetch-Control",
-          "value": "on"
-        },
-        {
-          "key": "Strict-Transport-Security",
-          "value": "max-age=31536000; includeSubDomains"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        }
-      ]
-    },
-    {
-      "source": "/_next/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ],
-  "regions": [
-    "iad1"
-  ],
-  "env": {
-    "NEXT_PUBLIC_APP_URL": "https://axiomid.app",
-    "NODE_ENV": "production"
-  }
+    ]
 }
